deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-test-app
  template:
    metadata:
      labels:
        app: go-test-app
    spec:
      containers:
      - name: go-test-app
        image: addyhypr4/go-test-app:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
