service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-test-app-service
spec:
  selector:
    app: go-test-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort
